package org.example.gogame;

public enum StoneColor {
    BLACK,
    WHITE,
    EMPTY,
}
